# rss-to-email

./: .dockerignore  .gitignore  .scalafix.conf  .secrets.yaml  Dockerfile  Makefile  README.md  TODO.md  build.sbt  docker-compose.yaml  docker-compose.yml  feeds.json  pyproject.toml
.github/workflows/: main_newssnips.yml
app/: Configuration.scala  main.py
app/controllers/: HomeController.scala  RSSController.scala
app/core/: Analysis.scala  Scraper.scala  Validator.scala  grade.scala
app/datastore/: Datastax.scala
app/models/: Feed.scala  Report.scala
app/views/: index.scala.html  main.scala.html
app/worksheets/: README.md  scratch.worksheet.sc
conf/: application.conf  routes
datacruncher/: .gitignore  .scalafix.conf  .scalafmt.conf  .travis.yml  build.sbt
datacruncher/project/: plugins.sbt
datacruncher/scripts/: compiled-run.sh  docker-entrypoint.sh  find_feed_urls.py  import_huggingface_models.py  mem-check.sh  prod-run.sh  spark_nlp_export_distilbert_from_huggingface.py
deploy/: Dockerfile  Dockerfile-dc  Dockerfile-wa  app.yaml  rte-ns.yaml  spark.yaml
dev-env/: Dockerfile  README.md  start.sh
learn/: README.md
learn/todo/: build.sbt
scripts/: build-datacruncher.sh  build-webapp.sh  build.sh  dev-test.sh  manual-test.sh  start.sh
seo/: README.md
seo/src/: index.html  web.config
webapp/: .scalafix.conf  .scalafmt.conf  build.sbt
webapp/app/: Configuration.scala  models  scratch.worksheet.sc  shared
webapp/conf/: application.conf  logback.xml  routes  swagger.yml
webapp/project/: plugins.sbt
webapp/scripts/: compiled-run.sh  (+8 more)
(+458 files in other folders)
