[tool.poetry]
name = "rss-to-email"
version = "0.0.1"
description = "RSS feed to email server."
authors = ["raokrutarth"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"
untangle = "^1.1.1"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"
pylint = "^2.6.0"
black = "^20.8b1"
autoflake = "^1.4"
vulture = "^2.1"
wily = "^1.19.0"
dlint = "^0.11.0"
bandit = "^1.6.2"
pytest-pythonpath = "^0.7.3"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-timeout = "^1.4.2"
pytest-mock = "^3.4.0"
line-profiler = "^3.1.0"
snakeviz = "^2.1.0"
tuna = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
